<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ShapeImageViewActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/siv_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/shapeimageview_titel"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="240dp"
            android:orientation="horizontal">

            <am.widget.shapeimageview.ShapeImageView
                android:id="@+id/siv_image_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_welcome"
                app:sivBorderColor="@color/colorAccent"
                app:sivBorderWidth="2dp"
                app:sivForeground="@drawable/bg_common_press_dark"
                app:sivHeightScale="1"
                app:sivScaleTarget="height"
                app:sivShape="Circle"
                app:sivWidthScale="1" />

            <am.widget.shapeimageview.ShapeImageView
                android:id="@+id/siv_image_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_welcome"
                app:sivBorderColor="@color/colorAccent"
                app:sivBorderWidth="2dp"
                app:sivForeground="@drawable/bg_common_press_dark"
                app:sivHeightScale="1"
                app:sivRoundRectRadius="10dp"
                app:sivScaleTarget="height"
                app:sivShape="RoundRect"
                app:sivWidthScale="1" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shapeimageview_height_width_scale" />

                <SeekBar
                    android:id="@+id/siv_sb_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="50" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shapeimageview_border_width" />

                <SeekBar
                    android:id="@+id/siv_sb_border"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="10" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shapeimageview_radius" />

                <SeekBar
                    android:id="@+id/siv_sb_radius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="30" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shapeimageview_padding" />

                <SeekBar
                    android:id="@+id/siv_sb_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="20" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shapeimageview_scaletype" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/siv_rg_st1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:isScrollContainer="true">

                        <RadioButton
                            android:id="@+id/siv_rb_center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shapeimageview_scaletype_center" />

                        <RadioButton
                            android:id="@+id/siv_rb_centercrop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shapeimageview_scaletype_centercrop" />

                        <RadioButton
                            android:id="@+id/siv_rb_centerinside"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shapeimageview_scaletype_centerinside" />

                        <RadioButton
                            android:id="@+id/siv_rb_fitcenter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shapeimageview_scaletype_fitcenter" />
                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/siv_rg_st2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:isScrollContainer="true">

                        <RadioButton
                            android:id="@+id/siv_rb_fitend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shapeimageview_scaletype_fitend" />

                        <RadioButton
                            android:id="@+id/siv_rb_fitstart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shapeimageview_scaletype_fitstart" />

                        <RadioButton
                            android:id="@+id/siv_rb_fitxy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shapeimageview_scaletype_fitxy" />

                        <RadioButton
                            android:id="@+id/siv_rb_matrix"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shapeimageview_scaletype_matrix" />
                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>